# tuppu

./: .gitignore  BENCH_BASELINE.md  BENCH_POST_GC.md  BENCH_POST_GC_MIGRATION.md  BENCH_PRE_GC_MIGRATION.md  CHANGELOG.md  CONTRIBUTING.md  GC_REFACTOR.md  LIMITATIONS.md  NEXT.md  README.md  SPEC.md  fun.tpu  pyproject.toml  smoke.py  tuppu
bench/: .gitignore  README.md  run.sh
bench/edubba_calls/: inline.tpu  inline_with_gc.tpu  outoflineheavier.tpu  run.py
bench/gc_migration/: counter_bump.tpu  fib35.tpu  run_preflight.py  str_concat.tpu  struct_copy.tpu
bench/grow_heavy/: dvec.tpu  ivec.tpu
bench/ivec_dvec_workload/: dvec.tpu  (+2 more)
examples/: collect_squares.tpu  discriminant.tpu  fact.tpu  fact_iter.tpu  fib.tpu  fizzbuzz.tpu  grade.tpu  greeting.tpu  hello.tpu  higher_order.tpu  linked_list.tpu  lua_interp.tpu  multiple_of_seven.tpu  omens.tpu  points.tpu  reciprocal_table.tpu  scribe.tpu  scribe_ledger.tpu  sexagesimal.tpu  tcp_bind.tpu
runtime/: README.md  tuppu_gc.c
stdlib/: list.tpu  map.tpu  rat.tpu  sex.tpu  str.tpu  vec.tpu
tests/: test_aliases.py  test_buffer.py  test_codegen.py  test_colophon.py  test_dvec.py  test_effects.py  test_ergonomics.py  test_examples.py  test_fn_value.py  test_gc_always_rooted.py  test_gc_torture.py  test_gloss.py  test_ivec.py  test_lexer.py  test_lvalue.py  test_map_methods.py  test_modules.py  test_multifile.py  test_ownership.py  test_parser.py  test_rat.py  test_sex.py  test_stdlib.py  test_stdlib_tpu.py  test_string.py  test_struct.py  test_sum.py  test_tables.py  test_tablets.py  test_typecheck.py  test_variadic.py
(+50 files in other folders)
