[project]
name = "tuppu"
version = "0.4.0"
description = "The Tuppu compiler"
requires-python = ">=3.12"
dependencies = [
  "llvmlite>=0.42",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
tuppu = "tuppu.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
